test/libhyperion/syntaxTests/denominations/fixed_point_division.hyp
contract C {
	uint constant a = 4 quanta / 3 hours;
	ufixed constant b = ufixed(4 quanta / 3 hours);
}
// ----
// TypeError 2326: (32-50): Type rational_const 10000000000000000 / 27 is not implicitly convertible to expected type uint256. Try converting to type ufixed256x62 or use an explicit conversion.
